<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="138dp"
        android:layout_height="195dp"
        android:layout_marginStart="@dimen/leftMarginSize"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/account_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:contentDescription="@string/account_icon"
                android:src="@drawable/ic_mealplan" />

            <TextView
                android:id="@+id/account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_icon"
                android:layout_marginStart="22dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="0dp"
                android:lineSpacingMultiplier="0.8"
                android:text="@string/account_name"
                android:textColor="@color/black"
                android:textSize="@dimen/balanceDescTextSize" />

            <TextView
                android:id="@+id/account_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_title"
                android:layout_marginStart="22dp"
                android:text="@string/current_balance"
                android:textColor="@color/black"
                android:textSize="@dimen/balanceDescTextSize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_balance"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/account_change_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="Trending icon"
                    android:src="@drawable/ic_trending_down_24px" />

                <TextView
                    android:id="@+id/account_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:text="$ 395.21"
                    android:textColor="@color/black"
                    android:textSize="@dimen/balanceChangeTextSize" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
